2012-07-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor_plugin.php,
	godmode/agentes/module_manager_editor_network.php,
	godmode/agentes/module_manager_editor_wmi.php,
	godmode/alerts/alert_list.php, godmode/menu.php,
	godmode/snmpconsole/snmp_filters.php, godmode/tag/edit_tag.php,
	include/functions_alerts.php, include/functions_html.php,
	pandoradb.sql, index.php: cleaned source code style.

2012-07-30  Hirofumi Kosaka  <kosaka@rworks.jp>

	* operation/reporting/graph_viewer.php: replace 'Period' with
	'Time range' to be translated. This is for consistency of
	labels between single graphs and custom graphs.

	Merged from 4.0.2

2012-07-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_groups.php:Removed trace.
	
    * include/javascript/pandora.js: Added modification to ajax call
	  when it's called form metaconsole.
	 
2012-07-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/gis_maps/index.php, godmode/groups/group_list.php,
	godmode/db/db_main.php, godmode/agentes/agent_manager.php,
	godmode/agentes/module_manager_editor_common.php: cleaned source
	code style.

2012-07-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/Image/Graph/*, include/Image/Graph.php,
	include/Image/Canvas/*, include/Image/Canvas.php,
	include/Image/Color.php: deleted unused old code.

2012-07-27  Junichi Satoh  <junichi@rworks.jp>

	* godmode/setup/setup.php: Changed to use DateTimeZone instead of
	'ttimezone' table for timezone setting.

	* include/function_config.php: Fixed that timezone is changed to
	default (Europe/Berlin) when update button is clicked without any
	changes in setup window.

	* pandoradb.sql, pandoradb.postgreSQL.sql, pandoradb.oracle.sql,
	pandoradb_data.sql, pandoradb.data.postgreSQL.sql, 
	pandoradb.data.oracle.sql, pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	pandoradb_migrate_4.0.x_to_5.0.oracle.sql, 
	pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: Removed 'ttimezone'
	table and its data.
